--- a/public/index.html
+++ b/public/index.html
@@ -30,15 +30,29 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="ber"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-analytics.js"></script>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyBRhFKGxDocJ5RWvBFHT0Lh7t3fCtnHxcw",
+    authDomain: "projet-test-643c9.firebaseapp.com",
+    databaseURL: "https://projet-test-643c9.firebaseio.com",
+    projectId: "projet-test-643c9",
+    storageBucket: "projet-test-643c9.appspot.com",
+    messagingSenderId: "516395506523",
+    appId: "1:516395506523:web:cf745547211b79ef18987e",
+    measurementId: "G-JDB60L7SSD"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
   </body>
 </html>
